--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -3,10 +3,20 @@
     {
       "path": "force-app",
       "default": true,
-      "package": "Copado Jira Cloud Deployments Automation Extension",
+      "package": "Copado Jira Cloud Deployments Automation",
       "versionName": "ver 0.1",
       "versionNumber": "0.1.0.NEXT",
-      "versionDescription": ""
+      "versionDescription": "",
+      "dependencies": [
+        {
+          "package": "copado@22.22.0.1",
+          "subscriberPackageVersionId": "04t5p000001E9I4AAK"
+        },
+        {
+          "package": "copadoconnect@1.32.0.1",
+          "subscriberPackageVersionId": "04tP70000005eMbIAI"
+        }
+      ]
     }
   ],
   "name": "Copado Jira Cloud Deployments Automation",
@@ -14,6 +24,6 @@
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "60.0",
   "packageAliases": {
-    "Copado Jira Cloud Deployments Automation Extension": "0Ho4w000000PAv2CAG"
+    "Copado Jira Cloud Deployments Automation": "0Ho4w000000PAv2CAG"
   }
 }
