--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,17 @@
       "package": "Copado Jira Cloud Deployments Automation",
       "versionName": "ver 0.1",
       "versionNumber": "0.1.0.NEXT",
-      "default": false,
-      "versionDescription": ""
+      "default": true,
+      "dependencies": [
+        {
+          "package": "copado@22.22.0.1",
+          "subscriberPackageVersionId": "04t5p000001E9I4AAK"
+        },
+        {
+          "package": "copadoconnect@1.32.0.1",
+          "subscriberPackageVersionId": "04tP70000005eMbIAI"
+        }
+      ]
     }
   ],
   "name": "Copado Jira Cloud Deployments Automation",
