--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -24,6 +24,7 @@
   "sourceApiVersion": "60.0",
   "packageAliases": {
     "Copado Jira Cloud Deployments Automation": "0Ho4w000000PAv7CAG",
-    "Copado Jira Cloud Deployments Automation@0.1.0-1-main": "04t4w000000XeGAAA0"
+    "Copado Jira Cloud Deployments Automation@0.1.0-1-main": "04t4w000000XeGAAA0",
+    "Copado Jira Cloud Deployments Automation@0.1.0-2-main": "04t4w000000XeGFAA0"
   }
 }
